# PipelineGenAI

./: .env  README.md  app.py  contrato.py  database.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
genai_dbt/: dbt_project.yml
genai_dbt/models/bronze/: bronze_vendas.sql
site/search/: search_index.json
