[tool.poetry]
name = "pipelinegenai"
version = "0.1.0"
description = ""
authors = ["Gustavo Miranda <gustavocataldomiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.38.0"
pydantic = "2.9.1"
altair = "5.4.1"
annotated-types = "0.7.0"
attrs = "24.2.0"
blinker = "1.8.2"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.2.0"
ghp-import = "2.1.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
greenlet = "3.1.0"
idna = "3.8"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
mergedeep = "1.3.4"
mkdocs = "1.6.1"
mkdocs-get-deps = "0.2.0"
narwhals = "1.6.4"
numpy = "2.1.1"
packaging = "24.1"
pandas = "2.2.2"
pathspec = "0.12.1"
pillow = "10.4.0"
platformdirs = "4.3.2"
protobuf = "5.28.0"
psycopg2-binary = "2.9.9"
pyarrow = "17.0.0"
pydantic-core = "2.23.3"
pydeck = "0.9.1"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.2"
pyyaml-env-tag = "0.1"
referencing = "0.35.1"
requests = "2.32.3"
rich = "13.8.1"
rpds-py = "0.20.0"
six = "1.16.0"
smmap = "5.0.1"
sqlalchemy = "2.0.34"
tenacity = "8.5.0"
toml = "0.10.2"
tornado = "6.4.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
watchdog = "4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
